lab2/Code/syntax.output
Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | /* empty */

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | Specifier FunDec SEMI
    8       | error SEMI

    9 ExtDecList: VarDec
   10           | VarDec COMMA ExtDecList

   11 Specifier: TYPE
   12          | StructSpecifier

   13 StructSpecifier: STRUCT OptTag LC DefList RC
   14                | STRUCT Tag
   15                | STRUCT OptTag LC error RC

   16 OptTag: ID
   17       | /* empty */

   18 Tag: ID

   19 VarDec: ID
   20       | VarDec LB INT RB
   21       | VarDec LB error RB

   22 FunDec: ID LP VarList RP
   23       | ID LP RP
   24       | ID LP error RP

   25 VarList: ParamDec COMMA VarList
   26        | ParamDec

   27 ParamDec: Specifier VarDec
   28         | error RP
   29         | error SEMI

   30 CompSt: LC DefList StmtList RC
   31       | LC error RC

   32 StmtList: Stmt StmtList
   33         | /* empty */

   34 Stmt: Exp SEMI
   35     | CompSt
   36     | RETURN Exp SEMI
   37     | RETURN error SEMI
   38     | IF LP Exp RP Stmt
   39     | IF LP error RP Stmt
   40     | IF LP Exp RP Stmt ELSE Stmt
   41     | WHILE LP Exp RP Stmt
   42     | WHILE LP error RP Stmt

   43 DefList: Def DefList
   44        | /* empty */

   45 Def: Specifier DecList SEMI
   46    | error SEMI

   47 DecList: Dec
   48        | Dec COMMA DecList

   49 Dec: VarDec
   50    | VarDec ASSIGNOP Exp

   51 Exp: Exp ASSIGNOP Exp
   52    | Exp AND Exp
   53    | Exp OR Exp
   54    | Exp RELOP Exp
   55    | Exp PLUS Exp
   56    | Exp MINUS Exp
   57    | Exp STAR Exp
   58    | Exp DIV Exp
   59    | LP Exp RP
   60    | LP error RP
   61    | MINUS Exp
   62    | NOT Exp
   63    | ID LP Args RP
   64    | ID LP RP
   65    | ID LP error RP
   66    | Exp LB Exp RB
   67    | Exp LB error RB
   68    | Exp DOT ID
   69    | ID
   70    | INT
   71    | FLOAT

   72 Args: Exp COMMA Args
   73     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 8 15 21 24 28 29 31 37 39 42 46 60 65 67
INT (258) 20 70
FLOAT (259) 71
ID (260) 16 18 19 22 23 24 63 64 65 68 69
SEMI (261) 4 5 7 8 29 34 36 37 45 46
COMMA (262) 10 25 48 72
ASSIGNOP (263) 50 51
RELOP (264) 54
PLUS (265) 55
MINUS (266) 56 61
STAR (267) 57
DIV (268) 58
AND (269) 52
OR (270) 53
DOT (271) 68
NOT (272) 62
TYPE (273) 11
LP (274) 22 23 24 38 39 40 41 42 59 60 63 64 65
RP (275) 22 23 24 28 38 39 40 41 42 59 60 63 64 65
LB (276) 20 21 66 67
RB (277) 20 21 66 67
LC (278) 13 15 30 31
RC (279) 13 15 30 31
STRUCT (280) 13 14 15
RETURN (281) 36 37
IF (282) 38 39 40
ELSE (283) 40
WHILE (284) 41 42
UMINUS (285)
LOWER_THAN_ELSE (286)


Nonterminals, with rules where they appear

$accept (32)
    on left: 0
Program (33)
    on left: 1, on right: 0
ExtDefList (34)
    on left: 2 3, on right: 1 2
ExtDef (35)
    on left: 4 5 6 7 8, on right: 2
ExtDecList (36)
    on left: 9 10, on right: 4 10
Specifier (37)
    on left: 11 12, on right: 4 5 6 7 27 45
StructSpecifier (38)
    on left: 13 14 15, on right: 12
OptTag (39)
    on left: 16 17, on right: 13 15
Tag (40)
    on left: 18, on right: 14
VarDec (41)
    on left: 19 20 21, on right: 9 10 20 21 27 49 50
FunDec (42)
    on left: 22 23 24, on right: 6 7
VarList (43)
    on left: 25 26, on right: 22 25
ParamDec (44)
    on left: 27 28 29, on right: 25 26
CompSt (45)
    on left: 30 31, on right: 6 35
StmtList (46)
    on left: 32 33, on right: 30 32
Stmt (47)
    on left: 34 35 36 37 38 39 40 41 42, on right: 32 38 39 40 41 42
DefList (48)
    on left: 43 44, on right: 13 30 43
Def (49)
    on left: 45 46, on right: 43
DecList (50)
    on left: 47 48, on right: 45 48
Dec (51)
    on left: 49 50, on right: 47 48
Exp (52)
    on left: 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68
    69 70 71, on right: 34 36 38 40 41 50 51 52 53 54 55 56 57 58 59
    61 62 66 67 68 72 73
Args (53)
    on left: 72 73, on right: 63 72


state 0

    0 $accept: . Program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    Program          go to state 4
    ExtDefList       go to state 5
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


state 1

    8 ExtDef: error . SEMI

    SEMI  shift, and go to state 9


state 2

   11 Specifier: TYPE .

    $default  reduce using rule 11 (Specifier)


state 3

   13 StructSpecifier: STRUCT . OptTag LC DefList RC
   14                | STRUCT . Tag
   15                | STRUCT . OptTag LC error RC

    ID  shift, and go to state 10

    $default  reduce using rule 17 (OptTag)

    OptTag  go to state 11
    Tag     go to state 12


state 4

    0 $accept: Program . $end

    $end  shift, and go to state 13


state 5

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


state 6

    2 ExtDefList: ExtDef . ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 14
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


state 7

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt
    7       | Specifier . FunDec SEMI

    ID    shift, and go to state 15
    SEMI  shift, and go to state 16

    ExtDecList  go to state 17
    VarDec      go to state 18
    FunDec      go to state 19


state 8

   12 Specifier: StructSpecifier .

    $default  reduce using rule 12 (Specifier)


state 9

    8 ExtDef: error SEMI .

    $default  reduce using rule 8 (ExtDef)


state 10

   16 OptTag: ID .
   18 Tag: ID .

    LC        reduce using rule 16 (OptTag)
    $default  reduce using rule 18 (Tag)


state 11

   13 StructSpecifier: STRUCT OptTag . LC DefList RC
   15                | STRUCT OptTag . LC error RC

    LC  shift, and go to state 20


state 12

   14 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 14 (StructSpecifier)


state 13

    0 $accept: Program $end .

    $default  accept


state 14

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


state 15

   19 VarDec: ID .
   22 FunDec: ID . LP VarList RP
   23       | ID . LP RP
   24       | ID . LP error RP

    LP  shift, and go to state 21

    $default  reduce using rule 19 (VarDec)


state 16

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


state 17

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 22


state 18

    9 ExtDecList: VarDec .
   10           | VarDec . COMMA ExtDecList
   20 VarDec: VarDec . LB INT RB
   21       | VarDec . LB error RB

    COMMA  shift, and go to state 23
    LB     shift, and go to state 24

    $default  reduce using rule 9 (ExtDecList)


state 19

    6 ExtDef: Specifier FunDec . CompSt
    7       | Specifier FunDec . SEMI

    SEMI  shift, and go to state 25
    LC    shift, and go to state 26

    CompSt  go to state 27


state 20

   13 StructSpecifier: STRUCT OptTag LC . DefList RC
   15                | STRUCT OptTag LC . error RC

    error   shift, and go to state 28
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    RC  reduce using rule 44 (DefList)

    Specifier        go to state 29
    StructSpecifier  go to state 8
    DefList          go to state 30
    Def              go to state 31


state 21

   22 FunDec: ID LP . VarList RP
   23       | ID LP . RP
   24       | ID LP . error RP

    error   shift, and go to state 32
    TYPE    shift, and go to state 2
    RP      shift, and go to state 33
    STRUCT  shift, and go to state 3

    Specifier        go to state 34
    StructSpecifier  go to state 8
    VarList          go to state 35
    ParamDec         go to state 36


state 22

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


state 23

   10 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 37

    ExtDecList  go to state 38
    VarDec      go to state 18


state 24

   20 VarDec: VarDec LB . INT RB
   21       | VarDec LB . error RB

    error  shift, and go to state 39
    INT    shift, and go to state 40


state 25

    7 ExtDef: Specifier FunDec SEMI .

    $default  reduce using rule 7 (ExtDef)


state 26

   30 CompSt: LC . DefList StmtList RC
   31       | LC . error RC

    error   shift, and go to state 41
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    INT     reduce using rule 44 (DefList)
    FLOAT   reduce using rule 44 (DefList)
    ID      reduce using rule 44 (DefList)
    MINUS   reduce using rule 44 (DefList)
    NOT     reduce using rule 44 (DefList)
    LP      reduce using rule 44 (DefList)
    LC      reduce using rule 44 (DefList)
    RC      reduce using rule 44 (DefList)
    RETURN  reduce using rule 44 (DefList)
    IF      reduce using rule 44 (DefList)
    WHILE   reduce using rule 44 (DefList)

    Specifier        go to state 29
    StructSpecifier  go to state 8
    DefList          go to state 42
    Def              go to state 31


state 27

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


state 28

   15 StructSpecifier: STRUCT OptTag LC error . RC
   46 Def: error . SEMI

    SEMI  shift, and go to state 43
    RC    shift, and go to state 44


state 29

   45 Def: Specifier . DecList SEMI

    ID  shift, and go to state 37

    VarDec   go to state 45
    DecList  go to state 46
    Dec      go to state 47


state 30

   13 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 48


state 31

   43 DefList: Def . DefList

    error   shift, and go to state 49
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    INT     reduce using rule 44 (DefList)
    FLOAT   reduce using rule 44 (DefList)
    ID      reduce using rule 44 (DefList)
    MINUS   reduce using rule 44 (DefList)
    NOT     reduce using rule 44 (DefList)
    LP      reduce using rule 44 (DefList)
    LC      reduce using rule 44 (DefList)
    RC      reduce using rule 44 (DefList)
    RETURN  reduce using rule 44 (DefList)
    IF      reduce using rule 44 (DefList)
    WHILE   reduce using rule 44 (DefList)

    Specifier        go to state 29
    StructSpecifier  go to state 8
    DefList          go to state 50
    Def              go to state 31


state 32

   24 FunDec: ID LP error . RP
   28 ParamDec: error . RP
   29         | error . SEMI

    SEMI  shift, and go to state 51
    RP    shift, and go to state 52


state 33

   23 FunDec: ID LP RP .

    $default  reduce using rule 23 (FunDec)


state 34

   27 ParamDec: Specifier . VarDec

    ID  shift, and go to state 37

    VarDec  go to state 53


state 35

   22 FunDec: ID LP VarList . RP

    RP  shift, and go to state 54


state 36

   25 VarList: ParamDec . COMMA VarList
   26        | ParamDec .

    COMMA  shift, and go to state 55

    $default  reduce using rule 26 (VarList)


state 37

   19 VarDec: ID .

    $default  reduce using rule 19 (VarDec)


state 38

   10 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 10 (ExtDecList)


state 39

   21 VarDec: VarDec LB error . RB

    RB  shift, and go to state 56


state 40

   20 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 57


state 41

   31 CompSt: LC error . RC
   46 Def: error . SEMI

    SEMI  shift, and go to state 43
    RC    shift, and go to state 58


state 42

   30 CompSt: LC DefList . StmtList RC

    INT     shift, and go to state 59
    FLOAT   shift, and go to state 60
    ID      shift, and go to state 61
    MINUS   shift, and go to state 62
    NOT     shift, and go to state 63
    LP      shift, and go to state 64
    LC      shift, and go to state 26
    RETURN  shift, and go to state 65
    IF      shift, and go to state 66
    WHILE   shift, and go to state 67

    $default  reduce using rule 33 (StmtList)

    CompSt    go to state 68
    StmtList  go to state 69
    Stmt      go to state 70
    Exp       go to state 71


state 43

   46 Def: error SEMI .

    $default  reduce using rule 46 (Def)


state 44

   15 StructSpecifier: STRUCT OptTag LC error RC .

    $default  reduce using rule 15 (StructSpecifier)


state 45

   20 VarDec: VarDec . LB INT RB
   21       | VarDec . LB error RB
   49 Dec: VarDec .
   50    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 72
    LB        shift, and go to state 24

    $default  reduce using rule 49 (Dec)


state 46

   45 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 73


state 47

   47 DecList: Dec .
   48        | Dec . COMMA DecList

    COMMA  shift, and go to state 74

    $default  reduce using rule 47 (DecList)


state 48

   13 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 13 (StructSpecifier)


state 49

   46 Def: error . SEMI

    SEMI  shift, and go to state 43


state 50

   43 DefList: Def DefList .

    $default  reduce using rule 43 (DefList)


state 51

   29 ParamDec: error SEMI .

    $default  reduce using rule 29 (ParamDec)


state 52

   24 FunDec: ID LP error RP .
   28 ParamDec: error RP .

    COMMA     reduce using rule 28 (ParamDec)
    RP        reduce using rule 28 (ParamDec)
    $default  reduce using rule 24 (FunDec)


state 53

   20 VarDec: VarDec . LB INT RB
   21       | VarDec . LB error RB
   27 ParamDec: Specifier VarDec .

    LB  shift, and go to state 24

    $default  reduce using rule 27 (ParamDec)


state 54

   22 FunDec: ID LP VarList RP .

    $default  reduce using rule 22 (FunDec)


state 55

   25 VarList: ParamDec COMMA . VarList

    error   shift, and go to state 75
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        go to state 34
    StructSpecifier  go to state 8
    VarList          go to state 76
    ParamDec         go to state 36


state 56

   21 VarDec: VarDec LB error RB .

    $default  reduce using rule 21 (VarDec)


state 57

   20 VarDec: VarDec LB INT RB .

    $default  reduce using rule 20 (VarDec)


state 58

   31 CompSt: LC error RC .

    $default  reduce using rule 31 (CompSt)


state 59

   70 Exp: INT .

    $default  reduce using rule 70 (Exp)


state 60

   71 Exp: FLOAT .

    $default  reduce using rule 71 (Exp)


state 61

   63 Exp: ID . LP Args RP
   64    | ID . LP RP
   65    | ID . LP error RP
   69    | ID .

    LP  shift, and go to state 77

    $default  reduce using rule 69 (Exp)


state 62

   61 Exp: MINUS . Exp

    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    ID     shift, and go to state 61
    MINUS  shift, and go to state 62
    NOT    shift, and go to state 63
    LP     shift, and go to state 64

    Exp  go to state 78


state 63

   62 Exp: NOT . Exp

    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    ID     shift, and go to state 61
    MINUS  shift, and go to state 62
    NOT    shift, and go to state 63
    LP     shift, and go to state 64

    Exp  go to state 79


state 64

   59 Exp: LP . Exp RP
   60    | LP . error RP

    error  shift, and go to state 80
    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    ID     shift, and go to state 61
    MINUS  shift, and go to state 62
    NOT    shift, and go to state 63
    LP     shift, and go to state 64

    Exp  go to state 81


state 65

   36 Stmt: RETURN . Exp SEMI
   37     | RETURN . error SEMI

    error  shift, and go to state 82
    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    ID     shift, and go to state 61
    MINUS  shift, and go to state 62
    NOT    shift, and go to state 63
    LP     shift, and go to state 64

    Exp  go to state 83


state 66

   38 Stmt: IF . LP Exp RP Stmt
   39     | IF . LP error RP Stmt
   40     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 84


state 67

   41 Stmt: WHILE . LP Exp RP Stmt
   42     | WHILE . LP error RP Stmt

    LP  shift, and go to state 85


state 68

   35 Stmt: CompSt .

    $default  reduce using rule 35 (Stmt)


state 69

   30 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 86


state 70

   32 StmtList: Stmt . StmtList

    INT     shift, and go to state 59
    FLOAT   shift, and go to state 60
    ID      shift, and go to state 61
    MINUS   shift, and go to state 62
    NOT     shift, and go to state 63
    LP      shift, and go to state 64
    LC      shift, and go to state 26
    RETURN  shift, and go to state 65
    IF      shift, and go to state 66
    WHILE   shift, and go to state 67

    $default  reduce using rule 33 (StmtList)

    CompSt    go to state 68
    StmtList  go to state 87
    Stmt      go to state 70
    Exp       go to state 71


state 71

   34 Stmt: Exp . SEMI
   51 Exp: Exp . ASSIGNOP Exp
   52    | Exp . AND Exp
   53    | Exp . OR Exp
   54    | Exp . RELOP Exp
   55    | Exp . PLUS Exp
   56    | Exp . MINUS Exp
   57    | Exp . STAR Exp
   58    | Exp . DIV Exp
   66    | Exp . LB Exp RB
   67    | Exp . LB error RB
   68    | Exp . DOT ID

    SEMI      shift, and go to state 88
    ASSIGNOP  shift, and go to state 89
    RELOP     shift, and go to state 90
    PLUS      shift, and go to state 91
    MINUS     shift, and go to state 92
    STAR      shift, and go to state 93
    DIV       shift, and go to state 94
    AND       shift, and go to state 95
    OR        shift, and go to state 96
    DOT       shift, and go to state 97
    LB        shift, and go to state 98


state 72

   50 Dec: VarDec ASSIGNOP . Exp

    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    ID     shift, and go to state 61
    MINUS  shift, and go to state 62
    NOT    shift, and go to state 63
    LP     shift, and go to state 64

    Exp  go to state 99


state 73

   45 Def: Specifier DecList SEMI .

    $default  reduce using rule 45 (Def)


state 74

   48 DecList: Dec COMMA . DecList

    ID  shift, and go to state 37

    VarDec   go to state 45
    DecList  go to state 100
    Dec      go to state 47


state 75

   28 ParamDec: error . RP
   29         | error . SEMI

    SEMI  shift, and go to state 51
    RP    shift, and go to state 101


state 76

   25 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 25 (VarList)


state 77

   63 Exp: ID LP . Args RP
   64    | ID LP . RP
   65    | ID LP . error RP

    error  shift, and go to state 102
    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    ID     shift, and go to state 61
    MINUS  shift, and go to state 62
    NOT    shift, and go to state 63
    LP     shift, and go to state 64
    RP     shift, and go to state 103

    Exp   go to state 104
    Args  go to state 105


state 78

   51 Exp: Exp . ASSIGNOP Exp
   52    | Exp . AND Exp
   53    | Exp . OR Exp
   54    | Exp . RELOP Exp
   55    | Exp . PLUS Exp
   56    | Exp . MINUS Exp
   57    | Exp . STAR Exp
   58    | Exp . DIV Exp
   61    | MINUS Exp .
   66    | Exp . LB Exp RB
   67    | Exp . LB error RB
   68    | Exp . DOT ID

    DOT  shift, and go to state 97
    LB   shift, and go to state 98

    $default  reduce using rule 61 (Exp)


state 79

   51 Exp: Exp . ASSIGNOP Exp
   52    | Exp . AND Exp
   53    | Exp . OR Exp
   54    | Exp . RELOP Exp
   55    | Exp . PLUS Exp
   56    | Exp . MINUS Exp
   57    | Exp . STAR Exp
   58    | Exp . DIV Exp
   62    | NOT Exp .
   66    | Exp . LB Exp RB
   67    | Exp . LB error RB
   68    | Exp . DOT ID

    DOT  shift, and go to state 97
    LB   shift, and go to state 98

    $default  reduce using rule 62 (Exp)


state 80

   60 Exp: LP error . RP

    RP  shift, and go to state 106


state 81

   51 Exp: Exp . ASSIGNOP Exp
   52    | Exp . AND Exp
   53    | Exp . OR Exp
   54    | Exp . RELOP Exp
   55    | Exp . PLUS Exp
   56    | Exp . MINUS Exp
   57    | Exp . STAR Exp
   58    | Exp . DIV Exp
   59    | LP Exp . RP
   66    | Exp . LB Exp RB
   67    | Exp . LB error RB
   68    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 89
    RELOP     shift, and go to state 90
    PLUS      shift, and go to state 91
    MINUS     shift, and go to state 92
    STAR      shift, and go to state 93
    DIV       shift, and go to state 94
    AND       shift, and go to state 95
    OR        shift, and go to state 96
    DOT       shift, and go to state 97
    RP        shift, and go to state 107
    LB        shift, and go to state 98


state 82

   37 Stmt: RETURN error . SEMI

    SEMI  shift, and go to state 108


state 83

   36 Stmt: RETURN Exp . SEMI
   51 Exp: Exp . ASSIGNOP Exp
   52    | Exp . AND Exp
   53    | Exp . OR Exp
   54    | Exp . RELOP Exp
   55    | Exp . PLUS Exp
   56    | Exp . MINUS Exp
   57    | Exp . STAR Exp
   58    | Exp . DIV Exp
   66    | Exp . LB Exp RB
   67    | Exp . LB error RB
   68    | Exp . DOT ID

    SEMI      shift, and go to state 109
    ASSIGNOP  shift, and go to state 89
    RELOP     shift, and go to state 90
    PLUS      shift, and go to state 91
    MINUS     shift, and go to state 92
    STAR      shift, and go to state 93
    DIV       shift, and go to state 94
    AND       shift, and go to state 95
    OR        shift, and go to state 96
    DOT       shift, and go to state 97
    LB        shift, and go to state 98


state 84

   38 Stmt: IF LP . Exp RP Stmt
   39     | IF LP . error RP Stmt
   40     | IF LP . Exp RP Stmt ELSE Stmt

    error  shift, and go to state 110
    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    ID     shift, and go to state 61
    MINUS  shift, and go to state 62
    NOT    shift, and go to state 63
    LP     shift, and go to state 64

    Exp  go to state 111


state 85

   41 Stmt: WHILE LP . Exp RP Stmt
   42     | WHILE LP . error RP Stmt

    error  shift, and go to state 112
    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    ID     shift, and go to state 61
    MINUS  shift, and go to state 62
    NOT    shift, and go to state 63
    LP     shift, and go to state 64

    Exp  go to state 113


state 86

   30 CompSt: LC DefList StmtList RC .

    $default  reduce using rule 30 (CompSt)


state 87

   32 StmtList: Stmt StmtList .

    $default  reduce using rule 32 (StmtList)


state 88

   34 Stmt: Exp SEMI .

    $default  reduce using rule 34 (Stmt)


state 89

   51 Exp: Exp ASSIGNOP . Exp

    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    ID     shift, and go to state 61
    MINUS  shift, and go to state 62
    NOT    shift, and go to state 63
    LP     shift, and go to state 64

    Exp  go to state 114


state 90

   54 Exp: Exp RELOP . Exp

    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    ID     shift, and go to state 61
    MINUS  shift, and go to state 62
    NOT    shift, and go to state 63
    LP     shift, and go to state 64

    Exp  go to state 115


state 91

   55 Exp: Exp PLUS . Exp

    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    ID     shift, and go to state 61
    MINUS  shift, and go to state 62
    NOT    shift, and go to state 63
    LP     shift, and go to state 64

    Exp  go to state 116


state 92

   56 Exp: Exp MINUS . Exp

    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    ID     shift, and go to state 61
    MINUS  shift, and go to state 62
    NOT    shift, and go to state 63
    LP     shift, and go to state 64

    Exp  go to state 117


state 93

   57 Exp: Exp STAR . Exp

    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    ID     shift, and go to state 61
    MINUS  shift, and go to state 62
    NOT    shift, and go to state 63
    LP     shift, and go to state 64

    Exp  go to state 118


state 94

   58 Exp: Exp DIV . Exp

    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    ID     shift, and go to state 61
    MINUS  shift, and go to state 62
    NOT    shift, and go to state 63
    LP     shift, and go to state 64

    Exp  go to state 119


state 95

   52 Exp: Exp AND . Exp

    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    ID     shift, and go to state 61
    MINUS  shift, and go to state 62
    NOT    shift, and go to state 63
    LP     shift, and go to state 64

    Exp  go to state 120


state 96

   53 Exp: Exp OR . Exp

    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    ID     shift, and go to state 61
    MINUS  shift, and go to state 62
    NOT    shift, and go to state 63
    LP     shift, and go to state 64

    Exp  go to state 121


state 97

   68 Exp: Exp DOT . ID

    ID  shift, and go to state 122


state 98

   66 Exp: Exp LB . Exp RB
   67    | Exp LB . error RB

    error  shift, and go to state 123
    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    ID     shift, and go to state 61
    MINUS  shift, and go to state 62
    NOT    shift, and go to state 63
    LP     shift, and go to state 64

    Exp  go to state 124


state 99

   50 Dec: VarDec ASSIGNOP Exp .
   51 Exp: Exp . ASSIGNOP Exp
   52    | Exp . AND Exp
   53    | Exp . OR Exp
   54    | Exp . RELOP Exp
   55    | Exp . PLUS Exp
   56    | Exp . MINUS Exp
   57    | Exp . STAR Exp
   58    | Exp . DIV Exp
   66    | Exp . LB Exp RB
   67    | Exp . LB error RB
   68    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 89
    RELOP     shift, and go to state 90
    PLUS      shift, and go to state 91
    MINUS     shift, and go to state 92
    STAR      shift, and go to state 93
    DIV       shift, and go to state 94
    AND       shift, and go to state 95
    OR        shift, and go to state 96
    DOT       shift, and go to state 97
    LB        shift, and go to state 98

    $default  reduce using rule 50 (Dec)


state 100

   48 DecList: Dec COMMA DecList .

    $default  reduce using rule 48 (DecList)


state 101

   28 ParamDec: error RP .

    $default  reduce using rule 28 (ParamDec)


state 102

   65 Exp: ID LP error . RP

    RP  shift, and go to state 125


state 103

   64 Exp: ID LP RP .

    $default  reduce using rule 64 (Exp)


state 104

   51 Exp: Exp . ASSIGNOP Exp
   52    | Exp . AND Exp
   53    | Exp . OR Exp
   54    | Exp . RELOP Exp
   55    | Exp . PLUS Exp
   56    | Exp . MINUS Exp
   57    | Exp . STAR Exp
   58    | Exp . DIV Exp
   66    | Exp . LB Exp RB
   67    | Exp . LB error RB
   68    | Exp . DOT ID
   72 Args: Exp . COMMA Args
   73     | Exp .

    COMMA     shift, and go to state 126
    ASSIGNOP  shift, and go to state 89
    RELOP     shift, and go to state 90
    PLUS      shift, and go to state 91
    MINUS     shift, and go to state 92
    STAR      shift, and go to state 93
    DIV       shift, and go to state 94
    AND       shift, and go to state 95
    OR        shift, and go to state 96
    DOT       shift, and go to state 97
    LB        shift, and go to state 98

    $default  reduce using rule 73 (Args)


state 105

   63 Exp: ID LP Args . RP

    RP  shift, and go to state 127


state 106

   60 Exp: LP error RP .

    $default  reduce using rule 60 (Exp)


state 107

   59 Exp: LP Exp RP .

    $default  reduce using rule 59 (Exp)


state 108

   37 Stmt: RETURN error SEMI .

    $default  reduce using rule 37 (Stmt)


state 109

   36 Stmt: RETURN Exp SEMI .

    $default  reduce using rule 36 (Stmt)


state 110

   39 Stmt: IF LP error . RP Stmt

    RP  shift, and go to state 128


state 111

   38 Stmt: IF LP Exp . RP Stmt
   40     | IF LP Exp . RP Stmt ELSE Stmt
   51 Exp: Exp . ASSIGNOP Exp
   52    | Exp . AND Exp
   53    | Exp . OR Exp
   54    | Exp . RELOP Exp
   55    | Exp . PLUS Exp
   56    | Exp . MINUS Exp
   57    | Exp . STAR Exp
   58    | Exp . DIV Exp
   66    | Exp . LB Exp RB
   67    | Exp . LB error RB
   68    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 89
    RELOP     shift, and go to state 90
    PLUS      shift, and go to state 91
    MINUS     shift, and go to state 92
    STAR      shift, and go to state 93
    DIV       shift, and go to state 94
    AND       shift, and go to state 95
    OR        shift, and go to state 96
    DOT       shift, and go to state 97
    RP        shift, and go to state 129
    LB        shift, and go to state 98


state 112

   42 Stmt: WHILE LP error . RP Stmt

    RP  shift, and go to state 130


state 113

   41 Stmt: WHILE LP Exp . RP Stmt
   51 Exp: Exp . ASSIGNOP Exp
   52    | Exp . AND Exp
   53    | Exp . OR Exp
   54    | Exp . RELOP Exp
   55    | Exp . PLUS Exp
   56    | Exp . MINUS Exp
   57    | Exp . STAR Exp
   58    | Exp . DIV Exp
   66    | Exp . LB Exp RB
   67    | Exp . LB error RB
   68    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 89
    RELOP     shift, and go to state 90
    PLUS      shift, and go to state 91
    MINUS     shift, and go to state 92
    STAR      shift, and go to state 93
    DIV       shift, and go to state 94
    AND       shift, and go to state 95
    OR        shift, and go to state 96
    DOT       shift, and go to state 97
    RP        shift, and go to state 131
    LB        shift, and go to state 98


state 114

   51 Exp: Exp . ASSIGNOP Exp
   51    | Exp ASSIGNOP Exp .
   52    | Exp . AND Exp
   53    | Exp . OR Exp
   54    | Exp . RELOP Exp
   55    | Exp . PLUS Exp
   56    | Exp . MINUS Exp
   57    | Exp . STAR Exp
   58    | Exp . DIV Exp
   66    | Exp . LB Exp RB
   67    | Exp . LB error RB
   68    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 89
    RELOP     shift, and go to state 90
    PLUS      shift, and go to state 91
    MINUS     shift, and go to state 92
    STAR      shift, and go to state 93
    DIV       shift, and go to state 94
    AND       shift, and go to state 95
    OR        shift, and go to state 96
    DOT       shift, and go to state 97
    LB        shift, and go to state 98

    $default  reduce using rule 51 (Exp)


state 115

   51 Exp: Exp . ASSIGNOP Exp
   52    | Exp . AND Exp
   53    | Exp . OR Exp
   54    | Exp . RELOP Exp
   54    | Exp RELOP Exp .
   55    | Exp . PLUS Exp
   56    | Exp . MINUS Exp
   57    | Exp . STAR Exp
   58    | Exp . DIV Exp
   66    | Exp . LB Exp RB
   67    | Exp . LB error RB
   68    | Exp . DOT ID

    PLUS   shift, and go to state 91
    MINUS  shift, and go to state 92
    STAR   shift, and go to state 93
    DIV    shift, and go to state 94
    DOT    shift, and go to state 97
    LB     shift, and go to state 98

    $default  reduce using rule 54 (Exp)


state 116

   51 Exp: Exp . ASSIGNOP Exp
   52    | Exp . AND Exp
   53    | Exp . OR Exp
   54    | Exp . RELOP Exp
   55    | Exp . PLUS Exp
   55    | Exp PLUS Exp .
   56    | Exp . MINUS Exp
   57    | Exp . STAR Exp
   58    | Exp . DIV Exp
   66    | Exp . LB Exp RB
   67    | Exp . LB error RB
   68    | Exp . DOT ID
